# hot-near-kit-bindings

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  netlify.toml
assets/: main.css  near_client.js  near_kit_hot.js  near_kit_hot_connect.js
assets/css/: greeting.css  main.css
assets/js/: near_kit_hot_connect.js  near_kit_hot_greeting.js
src/: lib.rs  main.rs
src/logic/: contract_hello.rs  contract_rhea.rs  contract_wrap.rs  hello.rs  network.rs
src/near/: near_client.rs  near_kit_hot_connect.rs  near_kit_hot_greeting.rs  types.rs
src/ui/: button_login.rs  button_network.rs  greeting.rs
