[package]
name = "hot-near-kit-bindings"
description = "🦀 rust bindings for a custom near kit and near connect client"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/sleet-rs"
repository = "https://github.com/sleet-rs/hot-near-kit-bindings"
authors = ["Nathan Renfroe <thesunshiningmin@gmail.com>"]
edition = "2021"
include = [
    "src/**/*",
    "assets/**/*",
    "Cargo.toml",
    "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# ===========================================
[dependencies]
dioxus = { version = "0.7.1", features = [] }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.90", features = ["Crypto", "SubtleCrypto", "Window", "HtmlDocument", "Location", "Request", "RequestInit", "Response", "console", "Headers", "Storage", "StorageManager"] }
# ===========================================
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
# ===========================================
