[package]
name = "hot-near-kit-bindings"
description = "🦀 rust bindings for a custom near kit and near connect client"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/sleet-rs"
repository = "https://github.com/sleet-rs/hot-near-kit-bindings"
authors = ["Nathan Renfroe <thesunshiningmin@gmail.com>"]
edition = "2021"
include = [
    "src/**/*",
    "assets/**/*",
    "Cargo.toml",
    "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# ===========================================
[dependencies]
dioxus = { version = "0.7.4" }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.90", features = ["Crypto", "SubtleCrypto", "Window", "HtmlDocument", "Location", "Request", "RequestInit", "Response", "console", "Headers", "Storage", "StorageManager"] }
# NEAR types
near-account-id = { version = "1.1", features = ["serde"] }
near-gas = { version = "0.3", features = ["serde"] }
near-token = { version = "0.3", features = ["serde"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
bs58 = "0.5"
# ===========================================
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
# ===========================================
# [profile.release]
# opt-level = "z"
# debug = 0
# lto = true
# codegen-units = 1
# ===========================================
